feat: add loading screen overlay + image preloading; fix hooks order warning; update vite/index preload\n\n- LoadingScreen component + CSS\n- useImagePreload hook with progress\n- Overlay-based loader to keep hooks order stable\n- index.html: preload critical images + meta\n- vite: production optimizations\n- docs: optimization + testing guides

--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RA Presentation</title>
+    <title>Molbio - Regulatory Affairs Presentation</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Molbio Diagnostics Regulatory Affairs presentation covering product licensing, global registrations, WHO technical dossier, and quality objectives." />
+    <meta name="keywords" content="Molbio, Regulatory Affairs, Medical Devices, IVD, Quality Objectives" />
+
+    <!-- Preload Critical Images for Faster Loading -->
+    <link rel="preload" as="image" href="/molbio-black-logo.png" />
+    <link rel="preload" as="image" href="/Global regitrations/01.png" />
+    <link rel="preload" as="image" href="/WHO/who.png" />
+
+    <!-- Preconnect to External Resources -->
+    <link rel="preconnect" href="https://img.icons8.com" />
+    <link rel="dns-prefetch" href="https://img.icons8.com" />
 </head>
 
 <body>
